# 168-project

./: .gitattributes  .gitignore  168-project.sln  168-project.vcxproj  168-project.vcxproj.filters  CMakeLists.txt  DeathPlane.cpp  DeathPlane.hpp  default_bus_layout.tres  default_env.tres  export_presets.cfg  gdnativelibrary.tres  grass_multimesh.tres  new_tileset.tres  project.godot  rock_multimesh.tres  tree_multimesh.tres
Audio/: Crystal.ogg.import  Dissolve.ogg.import  Hit.ogg.import  Swipe.ogg.import  Teleport.ogg.import  collection_30sec.ogg.import
Models/: Kattails.glb  Kattails.glb.import  Material.material  Material_001.material  Material_002.material
Models/Blender_Files/: .gitignore  Bush.blend  Grass.blend  Grass2.blend  Kattails.blend  NewAnimal.blend  NewAnimalRigged.blend  PineTree.blend  RegularTree.blend  animal.blend
Models/Player/: Animal.glb  Animal.glb.import  AnimalUV.png.import  ArmatureBounce.anim  EmptyAction.anim  Idle-loop.anim  JumpIn.anim  JumpOut.anim  Material.material  PlayerMaterial.tres  PlayerModel.glb  PlayerModel.glb.import  PlayerModel.tscn  Run-loop.anim  Run-loop2.anim  Swipe.anim  Walk-loop.anim  Walk.anim  runloop.tres
Models/Teo_Models/: PineTree.dae.import  PineTree.glb.import  PineTree.tscn  PineTreeMaterials.png.import  tree_albedo.material
Prefabs/: GameManager.tscn  Player.tscn  PlayerNetTest.tscn
Prefabs/Environment/: Kattails.tscn  Water.tscn
Prefabs/Menu/: ConnectionDialogue.tscn  HostDialogue.tscn
Prefabs/Net/: NetworkManager.tscn  NetworkSignalManager.tscn
Prefabs/Objects/: Crystal.tscn  DeathPlane.tscn  Grass.tscn  Portal.tscn  Rock.tscn
Prefabs/SignalManagers/: SignalManagerPlayer.tscn
Prefabs/UI/: GameUI.tscn  PauseMenu.tscn
Scenes/: Arena.tscn  GDNative-Hello.tscn  MainMenu.tscn  MainWorld.tscn  MainWorldKat.tscn  NetworkTest.tscn  PlayerTest.tscn  TeoTest.tscn  Teo_Test.tscn
Scripts/: GameManager.gdns  GrassMultimesh.gdns  LOD.gdns  LocalPlayerName.gd  Player.gdns
Scripts/Environment/: PropArea.tres
Scripts/Menu/: ConnectionDialogue.gdns  (+1 more)
Shaders/: CelDissolve.shader  CelGD.shader  Dissolve.shader  DissolveMaterial.tres  OutlinerGD.shader  UnderWater.shader  Water.shader
Textures/: diamond.png.import
godot-cpp/: SConstruct  api.json
src/: GDLibrary.cpp  GameManager.cpp  GameManager.hpp  GrassMultimesh.cpp  GrassMultimesh.hpp  Hello.cpp  Hello.hpp  LOD.cpp  LOD.hpp  gdlibrary.cpp  hello.cpp
(+158 files in other folders)
